force-app/main/default/objects/Documento__mdt/Documento__mdt.object-meta.xml
<CustomObject>
    <label>Documento (Configuracao)</label>
    <pluralLabel>Documentacao</pluralLabel>
</CustomObject>