force-app/main/default/objects/Documento__mdt/fields/Nome_do_Documento__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Documento__c</fullName>
    <label>Nome do Documento</label>
    <type>TextArea</type>
</CustomField>