force-app/main/default/objects/Documento__mdt/fields/Obrigatorio__c.field-meta.xml
<CustomField>
    <fullName>Obrigatorio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obrigatorio</label>
    <type>Checkbox</type>
</CustomField>